# hdrcapture

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  agents.md  pyproject.toml
docs/: EventDrivenCapture_future.md
examples/: benchmark.rs  check_white_level.rs  diagnose_singleshot.rs  diagnose_streaming.rs  tonemap_compare.rs
hdrcapture/: __init__.py  __init__.pyi
scripts/: build_all.ps1
src/: capture.rs  color.rs  d3d11.rs  image.rs  lib.rs  memory.rs  pipeline.rs  python.rs  shader.rs  tonemap.rs
src/capture/: hdr_detection.rs  monitor.rs  policy.rs  target.rs  types.rs  wgc.rs
src/color/: tone_map.rs  white_level.rs
src/d3d11/: compute.rs  texture.rs
src/image/: basic.rs  exr.rs  jxr.rs
src/memory/: elastic_pool.rs
src/pipeline/: build.rs  crop.rs  frame_sync.rs  modes.rs  process.rs  types.rs
src/python/: api.rs  capture.rs  frame.rs  helpers.rs  worker.rs
src/shader/: hdr_tonemap.hlsl  hdr_tonemap_eetf.hlsl  hdr_tonemap_shoulder.hlsl  runtime.rs
src/tonemap/: shader.rs  white_level.rs
tests/: compare_brightness.py  test_capture.py  test_capture.rs  test_capture_app.py  test_monitor_capture.rs  test_pipeline.rs  test_threading.py  test_window_capture.rs
