[package]
name = "hdrcapture"
version = "0.1.0"
edition = "2021"
authors = ["LDNKS094"]
description = "High Dynamic Range screen capture library for Windows"
license = "MIT"
repository = ""

[lib]
crate-type = ["rlib"]
name = "hdrcapture"

[dependencies]
windows = { version = "0.62", features = [
    # WinRT Graphics Capture
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    # Win32 Direct3D
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    # WinRT 互操作
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",
    # 窗口与显示器枚举
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_Diagnostics_ToolHelp",
    # 基础
    "Win32_Foundation",
] }
anyhow = "1.0"
image = "0.25"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
