[package]
name = "hdrcapture"
version = "0.2.0"
edition = "2021"
authors = ["LDNKS094"]
description = "Windows screen capture that works correctly under HDR"
license = "MIT"
repository = "https://github.com/LDNKS094/hdrcapture"
readme = "README.md"
keywords = ["screenshot", "screen-capture", "hdr", "windows"]
categories = ["multimedia::images", "os::windows-apis"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "hdrcapture"

[dependencies]
windows = { version = "0.62", features = [
    # WinRT Graphics Capture
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    # Win32 Direct3D
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    # D3DCompile (shader compilation)
    "Win32_Graphics_Direct3D_Fxc",
    # WIC (JPEG XR encoding)
    "Win32_Graphics_Imaging",
    # COM runtime
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    # DisplayConfig (SDR white level query)
    "Win32_Devices_Display",
    # WinRT interop
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",
    # Window and monitor enumeration
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_Security",
    # Foundation
    "Win32_Foundation",
] }
anyhow = "1.0"
image = "0.25"
pyo3 = "0.28.1"
numpy = { version = "0.28.0", features = ["half"] }
half = "2"
exr = "1.74.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
