[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "hdrcapture"
version = "0.1.0"
description = "Windows screen capture library that works correctly under HDR"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Microsoft :: Windows",
]

[tool.maturin]
features = ["pyo3/extension-module"]
