[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "hdrcapture"
version = "0.2.1"
description = "Windows screen capture that works correctly under HDR"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "LDNKS094" }]
keywords = ["screenshot", "screen-capture", "hdr", "windows", "numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/LDNKS094/hdrcapture"
Repository = "https://github.com/LDNKS094/hdrcapture"
Issues = "https://github.com/LDNKS094/hdrcapture/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
